--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+.Title {
+  color: aqua;
+  font-weight: 700;
+}
+
+.Title-enter-active {
+  animation: task 500ms ease-in alternate-reverse;
+}
+
+@keyframes task {
+  0% {
+    transform: translateX(0);
+  }
+
+  30% {
+    opacity: 0.7;
+    transform: translateX(30px);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+}
