--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,48 +1,29 @@
-.App {
+.Container {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.AppTitle {
+  color: #4242ce;
+  font-size: 30px;
+  font-weight: 800;
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ContactTitle {
+  color: #4242ce;
+  font-size: 25px;
+  font-weight: 800;
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.Title {
+.Title-slideIn {
   color: aqua;
   font-weight: 700;
 }
 
-.Title-enter-active {
+.Title-slideIn-appear-active {
   animation: task 500ms ease-in alternate-reverse;
 }
 
