--- a/src/components/ContactList/ContactList.css
+++ b/src/components/ContactList/ContactList.css
@@ -1,5 +1,11 @@
 .ContactList {
-  background-color: aqua;
+  display: flex;
+  flex-wrap: wrap;
+  width: 320px;
+  height: auto;
+  list-style: none;
+  margin: 0;
+  padding: 10px 0;
 }
 
 .ListItem-enter-active {
